--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,8 @@ env:
       NUMPY_VERSION="1.6.2" SCIPY_VERSION="0.11.0" CYTHON_VERSION="0.21"
     - DISTRIB="conda" PYTHON_VERSION="3.5" COVERAGE="true"
       NUMPY_VERSION="1.10.4" SCIPY_VERSION="0.17.0" CYTHON_VERSION="0.23.4"
+    - DISTRIB="conda" PYTHON_VERSION="3.6" COVERAGE="true"
+      NUMPY_VERSION="1.14.3" SCIPY_VERSION="1.1.0" CYTHON_VERSION="0.28.2"
 
 install: source ci_scripts/travis/install.sh
 script: bash ci_scripts/travis/test.sh
