Do appveyor.yml

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,24 +8,10 @@ environment:
     # /E:ON and /V:ON options are not enabled in the batch script interpreter
     # See: http://stackoverflow.com/a/13751649/163740
     CMD_IN_ENV: "cmd /E:ON /V:ON /C .\\ci_scripts\\appveyor\\run_with_env.cmd"
-    WHEELHOUSE_UPLOADER_USERNAME: sklearn
-    WHEELHOUSE_UPLOADER_SECRET:
-      secure: XzK+Mi6Ba5frV2B/jHq7h4aD8/nox9SsI3T8Kub1L2XNevRSIurUEry3PdWESzRY
-    MODULE: skltemplate
-    PROJECT_NAME: sklearn-template
-    CLOUD_STORAGE: CLOUDFILES
-    CLOUD_CONTATINER: sklearn-template-trial
+    MODULE: xgp
+    PROJECT_NAME: xgp
 
   matrix:
-    - PYTHON: "C:\\Python27"
-      PYTHON_VERSION: "2.7.8"
-      PYTHON_ARCH: "32"
-      MINICONDA: "C:\\Miniconda"
-
-    - PYTHON: "C:\\Python27-x64"
-      PYTHON_VERSION: "2.7.8"
-      PYTHON_ARCH: "64"
-      MINICONDA: "C:\\Miniconda-x64"
 
     - PYTHON: "C:\\Python35"
       PYTHON_VERSION: "3.5.0"
@@ -70,11 +56,15 @@ artifacts:
   - path: dist\*
 
 
-on_success:
-  # Upload the generated wheel package to Rackspace
-  # On Windows, Apache Libcloud cannot find a standard CA cert bundle so we
-  # disable the ssl checks.
-  - "python -m wheelhouse_uploader upload provider=%CLOUD_STORAGE% --no-ssl-check --local-folder=dist %CLOUD_CONTAINER%"
+deploy:
+  provider: GitHub
+  auth_token:
+    secure: JIVgocIa2zwFRn6rRqAH9q/NSs6zPrYkF7z//ygUoCxRZdkdX/7O8gl/2AWG7P90
+  artifact: dist\*
+  draft: false
+  prerelease: false
+  on:
+    appveyor_repo_tag: true
 
 
 test_script:
