--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,7 +26,7 @@ environment:
 install:
   # Miniconda is pre-installed in the worker build
   - "SET PATH=%MINICONDA%;%MINICONDA%\\Scripts;%PATH%"
-  - "SET PATH=C:\MinGW\bin;%PATH%"
+  - "SET PATH=C:\\MinGW\\bin;%PATH%"
   - "python -m pip install -U pip"
 
   # Check that we have the expected version and architecture for Python
