--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,6 @@
 # AppVeyor.com is a Continuous Integration service to build and run tests under
 # Windows
 
-
 environment:
   global:
     # SDK v7.0 MSVC Express 2008's SetEnv.cmd script will fail if the
@@ -10,6 +9,7 @@ environment:
     CMD_IN_ENV: "cmd /E:ON /V:ON /C .\\ci_scripts\\appveyor\\run_with_env.cmd"
     MODULE: xgp
     PROJECT_NAME: xgp
+    APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
 
   matrix:
 
@@ -24,10 +24,13 @@ environment:
       MINICONDA: "C:\\Miniconda35-x64"
 
 install:
+  # Set GCC path
+  - "DIR C:\\cygwin64"
+  - "DIR C:\\cygwin64\\bin"
+  - "SET PATH=C:\\mingw-w64\\x86_64-7.2.0-posix-seh-rt_v5-rev1\\mingw64\\bin;%PATH%"
+
   # Miniconda is pre-installed in the worker build
   - "SET PATH=%MINICONDA%;%MINICONDA%\\Scripts;%PATH%"
-  - "dir C:\\mingw-w64\\x86_64-7.2.0-posix-seh-rt_v5-rev1\\mingw64"
-  - "SET PATH=C:\\mingw-w64\\x86_64-7.2.0-posix-seh-rt_v5-rev1\\mingw64\\bin;%PATH%"
   - "python -m pip install -U pip"
 
   # Check that we have the expected version and architecture for Python
