--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,7 +9,6 @@ environment:
     CMD_IN_ENV: "cmd /E:ON /V:ON /C .\\ci_scripts\\appveyor\\run_with_env.cmd"
     MODULE: xgp
     PROJECT_NAME: xgp
-    APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
 
   matrix:
 
@@ -25,9 +24,7 @@ environment:
 
 install:
   # Set GCC path
-  - "DIR C:\\cygwin64"
-  - "DIR C:\\cygwin64\\bin"
-  - "SET PATH=C:\\mingw-w64\\x86_64-7.2.0-posix-seh-rt_v5-rev1\\mingw64\\bin;%PATH%"
+  - "SET PATH=C:\\cygwin64\\bin;%PATH%"
 
   # Miniconda is pre-installed in the worker build
   - "SET PATH=%MINICONDA%;%MINICONDA%\\Scripts;%PATH%"
