--- a/appveyor.yml
+++ b/appveyor.yml
@@ -24,7 +24,9 @@ environment:
 
 install:
   # Set GCC path
-  - "SET PATH=C:\\msys64\\bin;%PATH%"
+  - "dir C:\\msys64"
+  - "dir C:\\msys64\\bin"
+  - "SET PATH=C:\\mingw-w64\\x86_64-7.3.0-posix-seh-rt_v5-rev0\\bin;%PATH%"
 
   # Miniconda is pre-installed in the worker build
   - "SET PATH=%MINICONDA%;%MINICONDA%\\Scripts;%PATH%"
