--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,8 +25,8 @@ environment:
 install:
   # Set GCC path
   - "dir C:\\msys64"
-  - "dir C:\\msys64\\bin"
-  - "SET PATH=C:\\mingw-w64\\x86_64-7.3.0-posix-seh-rt_v5-rev0\\bin;%PATH%"
+  - "dir C:\\msys64\\mingw64"
+  - "SET PATH=C:\\msys64\\mingw64\\bin;%PATH%"
 
   # Miniconda is pre-installed in the worker build
   - "SET PATH=%MINICONDA%;%MINICONDA%\\Scripts;%PATH%"
