--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,8 @@
 # AppVeyor.com is a Continuous Integration service to build and run tests under
 # Windows
 
+platform: x64
+
 environment:
   global:
     # SDK v7.0 MSVC Express 2008's SetEnv.cmd script will fail if the
