--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,12 @@ env:
     # Directory where tests are run from
     - TEST_DIR=/tmp/test_dir/
     - MODULE=xgp
+    - TWINE_USERNAME=MaxHalford
   matrix:
-    #- DISTRIB="conda" PYTHON_VERSION="2.7"
-    #  NUMPY_VERSION="1.6.2" SCIPY_VERSION="0.11.0" CYTHON_VERSION="0.21"
-    - DISTRIB="conda" PYTHON_VERSION="3.5" COVERAGE="true"
+    - DISTRIB="conda" PYTHON_VERSION="3.5" COVERAGE="false"
       NUMPY_VERSION="1.10.4" SCIPY_VERSION="0.17.0" CYTHON_VERSION="0.23.4"
+    - DISTRIB="conda" PYTHON_VERSION="3.6" COVERAGE="true"
+      NUMPY_VERSION="1.14.3" SCIPY_VERSION="1.1.0" CYTHON_VERSION="0.28.2"
 
 install: source ci_scripts/travis/install.sh
 script: bash ci_scripts/travis/test.sh
