--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,10 @@ env:
   matrix:
     - DISTRIB="conda" PYTHON_VERSION="3.5" COVERAGE="false"
       NUMPY_VERSION="1.10.4" SCIPY_VERSION="0.17.0" CYTHON_VERSION="0.23.4"
+      CIBW_SKIP=*
     - DISTRIB="conda" PYTHON_VERSION="3.6" COVERAGE="true"
       NUMPY_VERSION="1.14.3" SCIPY_VERSION="1.1.0" CYTHON_VERSION="0.28.2"
+      CIBW_SKIP=cp27-*
 
 install: source ci_scripts/travis/install.sh
 script: bash ci_scripts/travis/test.sh
