--- a/.travis.yml
+++ b/.travis.yml
@@ -29,3 +29,14 @@ jobs:
         - source ci_scripts/travis/install.sh
         - bash ci_scripts/travis/test.sh
         - source ci_scripts/travis/success.sh
+    - stage: Test
+      DISTRIB="conda"
+      PYTHON_VERSION="3.6"
+      COVERAGE="true"
+      NUMPY_VERSION="1.14.3"
+      SCIPY_VERSION="1.1.0"
+      CYTHON_VERSION="0.28.2"
+      script:
+        - source ci_scripts/travis/install.sh
+        - bash ci_scripts/travis/test.sh
+        - source ci_scripts/travis/success.sh
