--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ cache:
   directories:
   - $HOME/.cache/pip
   - $HOME/download
+
 env:
   global:
     # Directory where tests are run from
@@ -25,10 +26,7 @@ jobs:
       NUMPY_VERSION="1.10.4"
       SCIPY_VERSION="0.17.0"
       CYTHON_VERSION="0.23.4"
-      script:
-        - source ci_scripts/travis/install.sh
-        - bash ci_scripts/travis/test.sh
-        - source ci_scripts/travis/success.sh
+      script: source ci_scripts/travis/install.sh && bash ci_scripts/travis/test.sh
     - stage: Test
       DISTRIB="conda"
       PYTHON_VERSION="3.6"
@@ -36,7 +34,4 @@ jobs:
       NUMPY_VERSION="1.14.3"
       SCIPY_VERSION="1.1.0"
       CYTHON_VERSION="0.28.2"
-      script:
-        - source ci_scripts/travis/install.sh
-        - bash ci_scripts/travis/test.sh
-        - source ci_scripts/travis/success.sh
+      script: source ci_scripts/travis/install.sh && bash ci_scripts/travis/test.sh && source ci_scripts/travis/success.sh
