--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,9 @@ env:
     - DISTRIB="conda" PYTHON_VERSION="3.6" COVERAGE="true"
       NUMPY_VERSION="1.14.3" SCIPY_VERSION="1.1.0" CYTHON_VERSION="0.28.2"
 
-script: .ci_scripts/.travis.sh
+script: ci_scripts/travis.sh
+
+jobs:
+  include:
+    - stage: wheels
+      script: ci_scripts/wheels.sh
