--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,11 @@ env:
     - MODULE=xgp
     - TWINE_USERNAME=MaxHalford
     - CIBW_SKIP="cp27-* cp34-*"
-    - CIBW_BEFORE_BUILD="pip install numpy scipy"
+    - CIBW_BEFORE_BUILD="pip install numpy scipy && \
+        sudo curl -O https://storage.googleapis.com/golang/go1.9.1.linux-amd64.tar.gz && \
+        sudo tar -xvf go1.9.1.linux-amd64.tar.gz && \
+        sudo mv go /usr/local
+      "
     - CIBW_BUILD_VERBOSITY=1
   matrix:
     - DISTRIB="conda" PYTHON_VERSION="3.5" COVERAGE="false"
