--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ env:
     - TWINE_USERNAME=MaxHalford
     - CIBW_SKIP="cp27-* cp34-*"
     - CIBW_BEFORE_BUILD="pip install numpy scipy && \
+        yum install curl && \
         curl -O https://storage.googleapis.com/golang/go1.9.1.linux-amd64.tar.gz && \
         tar -xvf go1.9.1.linux-amd64.tar.gz && \
         mv go /usr/local
