--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,9 @@ env:
     - CIBW_SKIP="cp27-* cp34-*"
     - CIBW_BEFORE_BUILD="pip install numpy scipy &&
         curl -O https://storage.googleapis.com/golang/go1.9.1.linux-amd64.tar.gz &&
-        tar -xvf go1.9.1.linux-amd64.tar.gz &&
-        mv go /usr/local
+        tar -xf go1.9.1.linux-amd64.tar.gz &&
+        mv go /usr/local &&
+        export PATH=$PATH:/usr/local
       "
     - CIBW_BUILD_VERBOSITY=1
   matrix:
